# libml

./: .gitignore  CMakeLists.txt  LICENSE  README.md  activations.c  layers.c  loader.c  loader.h  loss.c  nn.c  nn.h  normalization.c  normalization.h  test.c
examples/mnist-digits/: first.c
include/: error.h  loader.h  nn.h  normalization.h  opt.h
include/core/: ml_types.h
src/: activations.c  error.c  error_internal.h  layers.c  loader.c  loss.c  macros_internal.h  nn.c  normalization.c  optimizers.c
src/layers/: dense.c
src/layers/activations/: logistic.c  lrelu.c  relu.c  tanh.c
src/ld/: ld_convert.c  ld_mnist_alloc.c  ld_mnist_img_alloc.c  ld_mnist_img_free.c  ld_onehot.c
src/nn/: nn_accuracy.c  nn_backward_pass.c  nn_create.c  nn_destroy.c  nn_forward_pass.c  nn_internal.h  nn_loss.c  nn_mem.c  nn_predict.c  nn_regularization.c  nn_test.c  nn_train.c  nn_weights.c  source_nn_alloc_t.h  source_nn_free_t.h
src/opt/: opt_apply.c  opt_create.c  opt_internal.h  opt_mem.c
test/: test.h
test/activations/: Makefile  logistic_backward.c  logistic_forward.c  lrelu_backward.c  lrelu_forward.c  relu_backward.c  relu_forward.c  tanh_backward.c  tanh_forward.c
test/layers/: Makefile  batch_dense_backward.c  batch_dense_forward.c  dense_backward.c  dense_forward.c
test/nn/: Makefile  nn_batch_backward_pass.c  nn_batch_forward_pass.c  nn_create.c  nn_forward_pass.c  nn_train.c
test/nn/validation/: nn1.m  nn2.m  testgrad1.m  testgrad2.m  testgrad3.m  train1.m
test/normalization/: Makefile  norm_minmax.c  norm_standard.c
